--- a/playvar.yml
+++ b/playvar.yml
@@ -14,18 +14,19 @@
       state: latest
 
 
-  - name: creating directory
-    ansible.builtin.file:
-      path: /var/www/html/index.html
-      state: touch
-      mode: u=rwx,g=rwx,o=rwx
+        # - name: creating directory
+        # ansible.builtin.file:
+        #path: /var/www/html/index.html
+        #state: touch
+        # mode: u=rwx,g=rwx,o=rwx
 
 
 
-  - name: copy index.html
+  - name: copy webdata
+    become: true
     copy:
-      src: index.html
-      dest: /var/www/html/index.html
+      src: webdata/
+      dest: /var/www/html/
 
   - name: restart httpd
     service:
